// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactionPicker /> snapshot should match snapshot 1`] = `
<ReactionPicker>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    round={true}
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-round={true}
      data-spaced={false}
    />
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with className 1`] = `
<ReactionPicker
  className="example-class"
>
  <ButtonGroup
    className="example-class md-reaction-picker-wrapper"
    round={true}
  >
    <div
      className="md-button-group-wrapper example-class md-reaction-picker-wrapper"
      data-round={true}
      data-spaced={false}
    />
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with id 1`] = `
<ReactionPicker
  id="example-id"
>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    id="example-id"
    round={true}
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-round={true}
      data-spaced={false}
      id="example-id"
    />
  </ButtonGroup>
</ReactionPicker>
`;

exports[`<ReactionPicker /> snapshot should match snapshot with style 1`] = `
<ReactionPicker
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonGroup
    className="md-reaction-picker-wrapper"
    round={true}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <div
      className="md-button-group-wrapper md-reaction-picker-wrapper"
      data-round={true}
      data-spaced={false}
      style={
        Object {
          "color": "pink",
        }
      }
    />
  </ButtonGroup>
</ReactionPicker>
`;
